# ttester

./: CMakeLists.txt  README.md
include/ttester/: core.h  logger.h  tmain.h  trunner.h  tsuite.h  tsuite_exception.h  ttester.h
src/: core.cpp  logger.cpp  tmain.cpp  tsuite.cpp  ttester.cpp
